# sis-kernel-showcase

./: .gitignore  2025-11-20-caveat-the-messages-below-were-generated-by-the-u.txt  Cargo.toml  Dockerfile  IMPLEMENTATION_NOTES.md  MILESTONE-1-COMPLETION.md  OS-BLUEPRINT.md  PHASE_A2_TESTING.md  README.md  SECURITY.md  build.rs  claude-phase-4-week-6.txt  docker-compose.yml  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qemu_test_commands.txt  rust-toolchain.toml  test_timer_fixes.sh
apps/daemon/: Cargo.toml
apps/daemon/src/: main.rs  parser.rs  tracing_layer.rs
apps/daemon/src/api/: autonomy_handlers.rs  crash_handlers.rs  graph_handlers.rs  handlers.rs  llm_handlers.rs  logs_handlers.rs  memory_handlers.rs  metrics_handlers.rs  mod.rs  replay_handlers.rs  routes.rs  sched_handlers.rs  shell_handlers.rs  ws.rs
apps/daemon/src/metrics/: mod.rs  parser.rs  store.rs
apps/daemon/src/qemu/: mod.rs  replay.rs  shell_executor.rs  supervisor.rs
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: main.rs
crates/daemon/: Cargo.toml  package.json
crates/daemon/src/: config.rs  lib.rs  main.rs  parser.rs  tracing_layer.rs
crates/daemon/src/api/: autonomy_handlers.rs  conflicts_handlers.rs  crash_handlers.rs  deployment_handlers.rs  drift_handlers.rs  graph_handlers.rs  handlers.rs  llm_handlers.rs  logs_handlers.rs  memory_handlers.rs  metrics_handlers.rs  middleware.rs  mod.rs  orchestrator_handlers.rs  replay_handlers.rs  routes.rs  sched_handlers.rs  shell_handlers.rs  versions_handlers.rs  ws.rs
crates/daemon/src/metrics/: lttb.rs  mod.rs  parser.rs  series.rs  store.rs
crates/daemon/src/qemu/: command_executor.rs  live.rs  mod.rs  replay.rs  shell.rs  shell_executor.rs  supervisor.rs  types.rs
crates/kernel/: ._src_backup  Cargo.toml  build.rs  initramfs_data_minimal.rs
crates/kernel/src/: README.md  aarch64_context.rs  agent_bus.rs  ai_benchmark.rs  autonomy.rs  autonomy_metrics.rs  benchmark.rs  bootlog.rs  build_info.rs  cap.rs  chaos.rs  command_predictor.rs  compliance.rs  control.rs  deterministic.rs  driver.rs  graph.rs  heap.rs  inference.rs  interrupts.rs  latency_histogram.rs  llm.rs  log.rs  main.rs  main.rs.bak  meta_agent.rs  metrics_export.rs  ml.rs  ml.rs.bak  model.rs  network_predictor.rs  neural.rs  npu.rs  npu_driver.rs  pmu.rs  prediction_tracker.rs  predictive_memory.rs  predictive_scheduling.rs  prng.rs  shell.rs  (+10 more)
crates/kernel/src/agent_sys/: mod.rs  protocol.rs
crates/kernel/src/ai/: conflict.rs  deployment.rs  mod.rs  orchestrator.rs
crates/kernel/src/ai_insights/: crash_predictor.rs  mod.rs
crates/kernel/src/ai_ui/: ai_controls.rs  decision_log.rs  decision_viewer.rs  memory_predictor_viewer.rs  mod.rs  scheduling_viewer.rs
crates/kernel/src/animation/: animator.rs  easing.rs  mod.rs  transitions.rs
crates/kernel/src/applications/: ai_dashboard.rs  ai_insights.rs  file_manager.rs  mod.rs  settings.rs  terminal.rs
crates/kernel/src/audio/: buffer.rs  input.rs  mod.rs  output.rs  vad.rs
crates/kernel/src/block/: mod.rs  partition.rs
crates/kernel/src/camera/: capture.rs  format.rs  mod.rs
crates/kernel/src/channel/: mod.rs  spsc.rs
crates/kernel/src/control/: ai_metrics.rs
crates/kernel/src/drivers/: README.md  error.rs  mod.rs  selftest.rs  timeout.rs  traits.rs  virtio_blk.rs  virtio_gpu.rs  virtio_net.rs  watchdog.rs
crates/kernel/src/fs/: ext4.rs  jbd2.rs  mod.rs
crates/kernel/src/graphics/: color.rs  font.rs  icons.rs  mod.rs  primitives.rs
crates/kernel/src/hal/: dma.rs  mmio.rs  mod.rs
crates/kernel/src/init/: ai_init.rs  boot.rs  drivers_init.rs  error.rs  graphics_init.rs  mm_init.rs  mod.rs  network_init.rs  phases.rs  platform_init.rs  smp_security_init.rs  subsystems.rs  userspace_init.rs
crates/kernel/src/initramfs/: mod.rs  newc.rs
crates/kernel/src/lib/: bootlog.rs  debug.rs  error.rs  init_error.rs  mod.rs  panic.rs  printk.rs  ringbuf.rs
crates/kernel/src/llm/: arena.rs  backend.rs  basic.rs  benchmarks.rs  drift_detector.rs  errors.rs  finetune.rs  generate.rs  gguf.rs  kv_cache.rs  limits.rs  loader.rs  metrics.rs  mod.rs  quantize.rs  sampling.rs  simd.rs  state_inference.rs  tokenizer.rs  transformer.rs  version.rs
crates/kernel/src/mm/: address_space.rs  aslr.rs  buddy.rs  fault.rs  mod.rs  page.rs  page_cache.rs  pagetable.rs  paging.rs  slab.rs
crates/kernel/src/model_lifecycle/: health.rs  lifecycle.rs  mod.rs  registry.rs
crates/kernel/src/net/: dhcp.rs  mod.rs  smoltcp_iface.rs  sntp.rs  socket.rs
crates/kernel/src/otel/: drift.rs  exporter.rs  mod.rs
crates/kernel/src/platform/: dt.rs  mod.rs  qemu_virt.rs  rpi5.rs
crates/kernel/src/process/: current.rs  fork.rs  mod.rs  pid.rs  sched_glue.rs  scheduler.rs  scheduler_smp.rs  signal.rs  task.rs  wait.rs
crates/kernel/src/profiling/: mod.rs
crates/kernel/src/sched/: mod.rs  transformer_sched.rs
crates/kernel/src/security/: agent_audit.rs  agent_policy.rs  cred.rs  mod.rs  perm.rs  random.rs
crates/kernel/src/shadow/: agent.rs  compare.rs  divergence.rs  mod.rs  rollback.rs
crates/kernel/src/shell/: README.md  actorctl_helpers.rs  agentctl_helpers.rs  agentsys_helpers.rs  asm_helpers.rs  autoctl_helpers.rs  benchmark_helpers.rs  cmdctl_helpers.rs  compliance_helpers.rs  coordctl_helpers.rs  crashctl_helpers.rs  ctlhex_helpers.rs  deployctl_helpers.rs  driftctl_helpers.rs  fullautodemo_helpers.rs  gpio_helpers.rs  graphctl_helpers.rs  help.rs  help_content.rs  i2c_helpers.rs  learnctl_helpers.rs  llmctl_helpers.rs  logctl_helpers.rs  mailbox_helpers.rs  pmu_helpers.rs  (+20 more)
crates/testing/: Cargo.toml  PRODUCTION_READINESS_ASSESSMENT.md
crates/testing/.cargo/: config.toml
crates/testing/monitoring/: README.md  alertmanager.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  sis_kernel_rules.yml
crates/testing/scripts/: README.md  qemu_automation.sh  test_orchestrator.py  validate_results.py
crates/testing/src/: concurrency.rs  dt_parse.rs  ext4_stress.rs  hardware_backend.rs  kernel_interface.rs  lib.rs  npu_backend.rs  qemu_runtime.rs  scheduler_validation.rs
(+606 files in other folders)
