[workspace]
members = [
  "crates/testing",
  "crates/daemon"
]
exclude = [
  "gui/desktop/src-tauri",
  "crates/uefi-boot",  # Exclude - only built via uefi_run.sh for aarch64-unknown-uefi target
  "crates/kernel"      # Exclude - only built via uefi_run.sh for aarch64-unknown-none target
]
resolver = "2"

# Workspace-wide dependency management
# Shared dependencies across crates for version consistency and faster builds
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-test = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System programming
libc = "0.2"
nix = { version = "0.27", features = ["process", "term"] }

# Async traits
async-trait = "0.1"

# Random number generation
rand = "0.8"

# Testing utilities
tempfile = "3.8"

# Formal verification
kani-verifier = "0.40"
prusti-contracts = "0.1.0"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Web framework (daemon specific)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Utility
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
once_cell = "1.19"

[profile.dev.package.bootloader]
# Compile bootloader once, quickly, and keep it stable in cache
opt-level = 3
codegen-units = 1
debug = false

[profile.dev.package.bootloader_api]
opt-level = 3
codegen-units = 1
debug = false

# Global profile settings
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# Nightly aarch64-unknown-none + LTO may reference internal OOM hooks that
# are not exposed in no_std. Disable LTO to avoid link issues in release.
lto = false
codegen-units = 1
