[package]
name = "sisctl"
version = "0.1.0"
edition = "2021"
authors = ["SIS Kernel Team"]
description = "SIS Kernel control daemon - QEMU supervisor and API server"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Process management
nix = { version = "0.28", features = ["process", "signal"] }

# Regex for parsing
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sisctl"
path = "src/main.rs"
