[package]
name = "sisctl"
version = "0.1.0"
edition = "2021"
authors = ["SIS Kernel Team"]
description = "SIS Kernel control daemon - QEMU supervisor and API server"

[dependencies]
# Use workspace dependencies for consistency
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Process management (different version from testing crate)
nix = { version = "0.28", features = ["process", "signal"] }

# Regex for parsing
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "sisctl"
path = "src/lib.rs"

[[bin]]
name = "sisctl"
path = "src/main.rs"

[[bin]]
name = "openapi_dump"
path = "src/bin/openapi_dump.rs"
