[package]
name = "sis-testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive industry-grade test suite for SIS Kernel"
authors = ["SIS Kernel Team"]
license = "MIT OR Apache-2.0"
default-run = "sis-test-runner"

[lints.rust]
unused = "deny"
dead_code = "warn"
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow" 
cargo = "allow"

[[bin]]
name = "sis-test-runner"
path = "src/bin/main.rs"

[[bin]]
name = "ai-benchmark-runner"
path = "src/bin/ai_benchmark_runner.rs"

[[bin]]
name = "formal-verification-runner"
path = "src/bin/formal_verification_runner.rs"

[dependencies]
# Use workspace dependencies for consistency
tokio = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
nix = { workspace = true }
async-trait = { workspace = true }

# Formal verification (optional)
kani-verifier = { workspace = true, optional = true }

# Prusti contracts for verification (optional)
prusti-contracts = { workspace = true, optional = true }

[dev-dependencies]

# Testing utilities
tempfile = { workspace = true }

[features]
default = ["qemu-tests", "performance-tests", "correctness-tests"]

# Test categories
qemu-tests = []
performance-tests = []
correctness-tests = []
distributed-tests = []
security-tests = []
ai-tests = []
ext4-stress-test = []

# Optional heavy suites (off by default)
property-based-tests = ["dep:proptest", "dep:quickcheck"]

# Formal verification support (off by default)
formal-verification = ["dep:kani-verifier", "dep:prusti-contracts"]

# Integration with existing kernel
kernel-integration = []

# Extended test suites
comprehensive-suite = [
    "qemu-tests",
    "performance-tests", 
    "correctness-tests",
    "distributed-tests",
    "security-tests",
    "ai-tests"
]

# Production-grade enforcement
strict = [
    "comprehensive-suite",
    "formal-verification",
    "property-based-tests"
]

[dependencies.proptest]
workspace = true
optional = true

[dependencies.quickcheck]
workspace = true
optional = true
